# homeostasisbench

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bio_swarm_pilot/: README.md  __init__.py  __main__.py  baseline_swarm.py  bio-inspired-agent-swarm-prototype-hypothesis.md  bio_swarm.py  metrics.py  plots.py  simulation.py
bio_swarm_pilot/outputs/: aggregate_summary.csv  all_run_summary.csv  all_step_metrics.csv  experiment_report.md  layer_ablation_runs.csv  layer_ablation_summary.csv  scenario_failure_storm_step_metrics.csv  scenario_failure_storm_summary.csv  scenario_normal_step_metrics.csv  scenario_normal_summary.csv  scenario_overload_step_metrics.csv  scenario_overload_summary.csv
bio_swarm_pilot/outputs/pre_publish_smoke/: all_step_metrics.csv  (+5 more)
bio_swarm_pilot/tests/: test_cli.py  test_endocrine_control.py  test_failure_recovery.py  test_optimization_regression.py  test_report_metrics.py  test_sanity.py
docs/: GITHUB_BOOTSTRAP.md  GITHUB_LAUNCH_PLAYBOOK.md
docs/plans/: 2026-03-10-bio-swarm-optimization.md  2026-03-11-physio-swarm-skill-framework.md
docs/releases/: v0.1.0.md
examples/: physio_swarm_demo.py
physio_swarm/: __init__.py  kernel.py  protocol.py
scripts/: publish_homeostasisbench.ps1
skills/physio-swarm-protocol/: SKILL.md
tests/: test_physio_swarm_demo.py  test_physio_swarm_kernel.py  test_physio_swarm_protocol.py  test_physio_swarm_skill.py
(+8 files in other folders)
